--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Prince Mart</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -143,4 +140,5 @@
         </div>
         <script src="script.js"></script>
     </body>
+
 </html>
